@@ -1,3 +1,8 @@
+2005-07-30  Tim Jenness  <tjenness@cpan.org>
+
+	* lib/Astro/Coords.pm (calculate): Fix missing DateTime check in
+	the "calculate" method.
+
 2005-07-08  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>
 
 	* lib/Astro/Coords.pm: Factor out RA/Dec lookup when calculating
